[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/game/white.png" type="Texture" id=1]
[ext_resource path="res://resources/scenes/Select/CenterBar.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/ostrich-sans/OstrichSans-Medium.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/ostrich-sans/OstrichSans-Black.otf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/scenes/EditorSelect/EditorSelect.gd" type="Script" id=5]
[ext_resource path="res://resources/scenes/Select/PreviewStage.gd" type="Script" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	float uvx = UV.x * 720.0;
	float uvy = UV.y * 720.0;
	float sum = uvy + uvx;
	if (sum < 360.0) {
		COLOR = vec4(0,0,0,0)
	} else {
		COLOR = color
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 4 )

[node name="Select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" type="Sprite" parent="."]
modulate = Color( 0.113725, 0.109804, 0.137255, 1 )
material = SubResource( 2 )
position = Vector2( 920, 360 )
scale = Vector2( 720, 720 )
z_index = 1
texture = ExtResource( 1 )

[node name="CenterBar" type="Node2D" parent="."]
z_index = 3

[node name="BackBar" type="Control" parent="CenterBar"]
modulate = Color( 0.866667, 0.866667, 0.866667, 1 )
margin_left = 1296.0
margin_top = -16.0
margin_right = 2576.0
margin_bottom = 704.0
rect_scale = Vector2( -1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterBar" type="Control" parent="CenterBar"]
margin_left = 1280.0
margin_right = 2560.0
margin_bottom = 720.0
rect_scale = Vector2( -1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongInfo" type="Node2D" parent="."]
z_index = 5

[node name="SongName" type="Label" parent="SongInfo"]
margin_left = 764.0
margin_top = 584.0
margin_right = 1264.0
margin_bottom = 645.0
custom_fonts/font = SubResource( 3 )
text = "No songs installed!"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtistName" type="Label" parent="SongInfo"]
margin_left = 768.0
margin_top = 632.0
margin_right = 1264.0
margin_bottom = 693.0
custom_fonts/font = SubResource( 4 )
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="SongInfo"]
margin_left = 784.0
margin_top = 672.0
margin_right = 1264.0
margin_bottom = 704.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewSong" type="TextureButton" parent="SongInfo"]
margin_left = 720.0
margin_top = 672.0
margin_right = 848.0
margin_bottom = 704.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SongInfo/NewSong"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 128.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 6 )
text = "NEW SONG"
align = 1
valign = 1

[node name="Scroller" type="Node2D" parent="."]
position = Vector2( 640, 360 )
z_index = 4

[node name="Tween" type="Tween" parent="."]

[node name="Viewport" type="ViewportContainer" parent="."]
margin_left = -560.0
margin_right = 720.0
margin_bottom = 720.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubViewport" type="Viewport" parent="Viewport"]
size = Vector2( 1280, 720 )
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 6 )
